--- a/Common/Languages/ChineseSimplified/Keyed/RAFaction.xml
+++ b/Common/Languages/ChineseSimplified/Keyed/RAFaction.xml
@@ -11,18 +11,21 @@
 
 
   <!-- Keyed String-->
-  <HostileFail>与{0}敌对，无法交易</HostileFail>
+  <HostileFail>与 {0} 敌对，无法交易</HostileFail>
   <RAExchangeOpenOption>开始交易</RAExchangeOpenOption>
   <RAExchangeRoot>交易界面</RAExchangeRoot>
   <RAStudentRecruitMenu>学生招募</RAStudentRecruitMenu>
   <RABack>返回上级菜单</RABack>
   <StudentGacha>抽卡</StudentGacha>
   <NotEnoughMoney>我们需要更多的晶体矿</NotEnoughMoney>
-  <StudentGachaRandom>随机抽取\n花费：{0}银</StudentGachaRandom>
-  <StudentGachaCertainSchool>选择学校进行抽取（未实装）\n花费：{0}银</StudentGachaCertainSchool>
-  <StudentArrived>{0}已到达。</StudentArrived>
+  <StudentGachaRandom>随机抽取\n花费：{0} 银</StudentGachaRandom>
+  <StudentGachaCertainSchool>选择学校进行抽取（未实装）\n花费：{0} 银</StudentGachaCertainSchool>
+  <StudentArrived>{0} 已到达。</StudentArrived>
   <ChooseSchool>选择学校</ChooseSchool>
   <NoAvailableStudentInSchool>该学校目前没有可招募的学生。</NoAvailableStudentInSchool>
 
   <StudentAlreadyRecruited>{0} 已经被招募。</StudentAlreadyRecruited>
+
+  <StudentHeavilyInjuredAngry>{0} 的重伤让sensei十分愤怒。他决定在接下来的 {1} 天内与你敌对。</StudentHeavilyInjuredAngry>
+  <StudentHeavilyInjured>{0} 的重伤</StudentHeavilyInjured>
 </LanguageData>
