--- a/Common/Languages/ChineseSimplified/Keyed/RAFaction.xml
+++ b/Common/Languages/ChineseSimplified/Keyed/RAFaction.xml
@@ -33,7 +33,7 @@
   <ThresholdBroken>已打破阈值</ThresholdBroken>
 
   <Daysleft>总力战剩余{0}天</Daysleft>
-
-  <BossHPMultiplier>BOSS血量倍数：{0}</BossHPMultiplier>
+  <BossHPMultiplier>BOSS血量：{0}</BossHPMultiplier>
   <Escortees>喽啰：</Escortees>
+  <RaidIncoming>无法召唤：BOSS战未结束</RaidIncoming>
 </LanguageData>
