其余汉化补全

--- a/Common/Languages/ChineseSimplified/DefInjected/RimArchive.StudentDefs/Students.xml
+++ b/Common/Languages/ChineseSimplified/DefInjected/RimArchive.StudentDefs/Students.xml
@@ -33,6 +33,24 @@
     有收集色情杂志的兴趣，只要看到一点点相关元素就会满脑情色妄想，自顾自地害羞起来。
     
     "&lt;i&gt;不干净的东西就是要全部烧光！&lt;/i&gt;"</BA_Koharu.description>
+	
+	<!--花子-->
+	<BA_Hanako.description>三一综合学园所属，补习授课部中情感丰富的女孩。
+
+    一眼看上去是位文雅而有品位的淑女……的感觉，但实际上是位性话题滔滔不绝的问题儿童。
+    
+    "&lt;i&gt;从今往后各种各样的事情还请多多关照。……对，「各种各样」的。&lt;/i&gt;"</BA_Hanako.description>
+
+	<!--诺亚-->
+	<BA_Noa.description>千年科学学园所属，学生会「研讨会」的书记。\n\n主要负责记录研讨会的决定事项和会议内容，以及千年的学生开发的制品的特别许可的鉴别和注册专利的业务。拥有非常优秀的记忆力，见过听过一次的内容基本能完整默记下来。\n\n"&lt;i&gt;要和我一起前往，合理与理性的世界吗？&lt;/i&gt;"</BA_Noa.description>
+
+	<!--莉音-->
+	<BA_Rio.description>千年科学学园所属，“研讨会”的主席。\n\n作为千年科学学园的重要人物，莉音始终果断高效地处理着许多事务，与同为“研讨会”成员的优香和诺亚不同，莉音给人的印象往往是孤身一人的幕后之人。\n\n对莉音来说，不惜一切代价达成目标是她的处世之道。</BA_Rio.description>
+
+	<!--芹娜-->
+	<BA_Serina.description>三一综合学园所属，献身于救护骑士团的温柔少女。\n\n性格非常善良，经常参加志愿者活动，而且十分关心大伙身体状况，以至于学生们都纷纷称道【像我妈一样】。\n\n虽然不喜欢争斗，但面对威胁和平的敌人，会毅然决然的面对。</BA_Serina.description>
+
+	
 
 
 </LanguageData>
