--- a/Common/Languages/English/Keyed/Keyed.xml
+++ b/Common/Languages/English/Keyed/Keyed.xml
@@ -1,40 +1,40 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
   <!-- School Names-->
-  <Abydos>阿拜多斯高中</Abydos>
-  <Gehenna>格黑娜学园</Gehenna>
-  <Shanhaijing>山海经高级中学</Shanhaijing>
-  <SRT>SRT 特殊学园</SRT>
+  <Abydos>Abydos High School</Abydos>
+  <Gehenna>Gehenna Academy</Gehenna>
+  <Shanhaijing>Shanhaijing Academy</Shanhaijing>
+  <SRT>SRT Special Academy</SRT>
 
 
 
 
 
   <!-- Keyed String-->
-  <HostileFail>与 {0} 敌对，无法交易</HostileFail>
-  <RAExchangeOpenOption>开始交易</RAExchangeOpenOption>
-  <RAExchangeRoot>交易界面</RAExchangeRoot>
-  <RAStudentRecruitMenu>学生招募</RAStudentRecruitMenu>
-  <RABack>返回上级菜单</RABack>
-  <StudentGacha>抽卡</StudentGacha>
-  <NotEnoughMoney>我们需要更多的晶体矿</NotEnoughMoney>
-  <StudentGachaRandom>随机抽取\n花费：{0} 银</StudentGachaRandom>
-  <StudentGachaCertainSchool>选择学校进行抽取（未实装）\n花费：{0} 银</StudentGachaCertainSchool>
-  <StudentArrived>{0} 已到达。</StudentArrived>
-  <ChooseSchool>选择学校</ChooseSchool>
-  <NoAvailableStudentInSchool>该学校目前没有可招募的学生。</NoAvailableStudentInSchool>
+  <HostileFail>Cannot start trade, hostile to {0}</HostileFail>
+  <RAExchangeOpenOption>Start Trade</RAExchangeOpenOption>
+  <RAExchangeRoot>Trade UI</RAExchangeRoot>
+  <RAStudentRecruitMenu>Student Recruitment</RAStudentRecruitMenu>
+  <RABack>Back</RABack>
+  <StudentGacha>Gacha</StudentGacha>
+  <NotEnoughMoney>Not enough minerals(1500$)</NotEnoughMoney>
+  <StudentGachaRandom>Random gacha\nCost:{0}$</StudentGachaRandom>
+  <StudentGachaCertainSchool>Recruit a random student from certain school\nCost:{0}$</StudentGachaCertainSchool>
+  <StudentArrived>{0} has arrived.</StudentArrived>
+  <ChooseSchool>Choose school</ChooseSchool>
+  <NoAvailableStudentInSchool>No available students in this schoo ATM</NoAvailableStudentInSchool>
 
-  <StudentAlreadyRecruited>{0} 已经被招募。</StudentAlreadyRecruited>
+  <StudentAlreadyRecruited>{0} has already been recruited.</StudentAlreadyRecruited>
 
-  <StudentHeavilyInjuredAngry>{0} 的重伤让sensei十分愤怒。他决定在接下来的 {1} 天内与你敌对。</StudentHeavilyInjuredAngry>
-  <StudentHeavilyInjured>{0} 的重伤</StudentHeavilyInjured>
+  <StudentHeavilyInjuredAngry>Sensei is angry by how you treated {0}, and decided to be hostile to you in the next {1} days.</StudentHeavilyInjuredAngry>
+  <StudentHeavilyInjured>{0}'s benn heavily injured</StudentHeavilyInjured>
 
-  <CurrentTotal>已造成:{0}s/阈值:{1}s</CurrentTotal>
-  <ThresholdBroken>已打破阈值</ThresholdBroken>
+  <CurrentTotal>Current:{0}s/Threshold:{1}s</CurrentTotal>
+  <ThresholdBroken>Groggy gauge reached</ThresholdBroken>
 
-  <Daysleft>总力战剩余{0}天</Daysleft>
-  <BossHPMultiplier>BOSS承伤：{0}</BossHPMultiplier>
-  <Escortees>喽啰：</Escortees>
-  <RaidIncoming>无法召唤：BOSS战未结束</RaidIncoming>
+  <Daysleft>This total assault will end in {0} days</Daysleft>
+  <BossHPMultiplier>BOSS damage multiplier: {0}</BossHPMultiplier>
+  <Escortees>Escortees:</Escortees>
+  <RaidIncoming>Cannot summon: incoming raid</RaidIncoming>
 
 </LanguageData>
